clean up a bit